--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "electron": "^12.0.2"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
+    "mariadb": "^2.5.3",
     "method": "^2.0.0",
     "method-override": "^3.0.0",
-    "multer": "^1.4.2"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2"
   }
 }
