--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.4.1",
     "connect-flash": "^0.1.1",
+    "electron-first-run": "^3.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
+    "jquery": "^3.6.0",
     "mariadb": "^2.5.3",
     "method": "^2.0.0",
     "method-override": "^3.0.0",
