--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
     "font-awesome": "^4.7.0",
+    "get-script-tag-vars": "^1.1.2",
     "jplist": "^0.0.3",
     "jquery": "^3.6.0",
     "mariadb": "^2.5.3",
