--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.1",
     "bootstrap-table": "^1.18.3",
+    "bs-custom-file-input": "^1.3.4",
     "connect-flash": "^0.1.1",
     "electron-first-run": "^3.0.0",
     "express": "^4.17.1",
