--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "electron-first-run": "^3.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "filereader": "^0.10.3",
     "font-awesome": "^4.7.0",
+    "html-table-to-json": "^1.0.0",
     "jquery": "^3.6.0",
     "mariadb": "^2.5.3",
     "method": "^2.0.0",
