--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.2",
     "popper": "^1.0.1",
     "sequelize": "^6.6.2",
-    "tabletojson": "^2.0.6"
+    "tabletojson": "^2.0.6",
+    "x-editable-bs4": "^1.5.4"
   }
 }
