--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "method": "^2.0.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "morris.js": "^0.5.0",
     "multer": "^1.4.2",
     "popper": "^1.0.1",
+    "raphael": "^2.3.0",
     "sequelize": "^6.6.2",
     "tabletojson": "^2.0.6",
     "x-editable-bs4": "^1.5.4"
