--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "morris.js": "^0.5.0",
     "multer": "^1.4.2",
+    "pdfjs": "^2.4.5",
     "popper": "^1.0.1",
     "raphael": "^2.3.0",
     "sequelize": "^6.6.2",
