--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "exec":"electron ."
   },
   "keywords": [],
-  "author": "",
+  "author": "Violeta Vera - Rodrigo Munguía",
   "license": "ISC",
-  "description": "",
+  "description": "Seguimiento de estudiantes",
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.59",
+    "@electron-forge/maker-deb": "^6.0.0-beta.59",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.59",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.59",
+    "@electron-forge/maker-zip": "^6.0.0-beta.59",
     "electron": "^12.0.11"
   },
   "dependencies": {
@@ -20,6 +28,7 @@
     "bs-custom-file-input": "^1.3.4",
     "connect-flash": "^0.1.1",
     "electron-first-run": "^3.0.0",
+    "electron-squirrel-startup": "^1.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-ip-filter-middleware": "^1.0.20",
@@ -32,11 +41,37 @@
     "morgan": "^1.10.0",
     "morris.js": "^0.5.0",
     "multer": "^1.4.2",
-    "pdfjs": "^2.4.5",
     "popper": "^1.0.1",
     "raphael": "^2.3.0",
     "sequelize": "^6.6.2",
     "tabletojson": "^2.0.6",
     "x-editable-bs4": "^1.5.4"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "adminstudent"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
   }
 }
