añadido campo de configuración de equipo y de grado en el archivo de configuracion de usuario

--- a/config/userconfig.json
+++ b/config/userconfig.json
@@ -1,7 +1,8 @@
 {
+  "grado": "",
   "nombre": "Violeta",
   "clave": "Is1234",
   "correo": "vi@itesi.com",
   "califi": "1",
-  "calife": "0"
+  "valequipo": "1"
 }
