--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "exec":"electron ."
+    "exec": "electron ."
   },
   "keywords": [],
   "author": "Violeta Vera - Rodrigo Munguía",
@@ -27,11 +27,13 @@
     "bootstrap-table": "^1.18.3",
     "bs-custom-file-input": "^1.3.4",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "electron-first-run": "^3.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-ip-filter-middleware": "^1.0.20",
+    "express-session": "^1.17.2",
     "font-awesome": "^4.7.0",
     "html-table-to-json": "^1.0.0",
     "jquery": "^3.6.0",
