--- a/config/config.json
+++ b/config/config.json
@@ -9,7 +9,7 @@
   },
   "registrobd": {
     "user": "root",
-    "password": "uxrlrpaqga9lfe9l",
+    "password": "vsvsrmg",
     "port": "3306",
     "database": "registro",
     "host": "127.0.0.1",
@@ -17,7 +17,7 @@
   },
   "production": {
     "user": "root",
-    "password": "uxrlrpaqga9lfe9l",
+    "password": "vsvsrmg",
     "port": "3306",
     "database": "registro",
     "host": "127.0.0.1",
