--- a/package.json
+++ b/package.json
@@ -13,12 +13,8 @@
   "license": "ISC",
   "description": "Seguimiento de estudiantes",
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.59",
-    "@electron-forge/maker-deb": "^6.0.0-beta.59",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.59",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.59",
-    "@electron-forge/maker-zip": "^6.0.0-beta.59",
-    "electron": "^12.0.11"
+    "electron": "^12.0.11",
+    "electron-builder": "^22.11.7"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
