Cambio de forge por builder para empaquetacion del proyecto

--- a/package.json
+++ b/package.json
@@ -57,6 +57,6 @@
       "createDesktopShortcut" : true,
       "createStartMenuShortcut" : true
     },
-    "extraFiles": ["mariadb"]
+    "extraFiles": ["build"]
   }
 }
