--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
       "allowElevation": true,
       "allowToChangeInstallationDirectory" : false,
       "createDesktopShortcut" : true,
-      "createStartMenuShortcut" : true
+      "createStartMenuShortcut" : true,
+      "include": "build/installer.nsh"
     },
     "extraFiles": ["build"]
   }
