Limpieza de archivos para empaquetado

--- a/config/userconfig.json
+++ b/config/userconfig.json
@@ -1,8 +1,8 @@
 {
   "grado": "",
-  "nombre": "Violeta",
-  "clave": "Is1234",
-  "correo": "vi@itesi.com",
+  "nombre": "",
+  "clave": "",
+  "correo": "",
   "califi": "1",
   "valequipo": "0"
 }
