--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
       "allowToChangeInstallationDirectory" : false,
       "createDesktopShortcut" : true,
       "createStartMenuShortcut" : true,
-      "include": "build/installer.nsh"
+      "include": "build/installer.nsh",
+      "license": "build/license.txt"
     },
     "extraFiles": ["build/mariadb.msi"]
   }
