Agregada columna extra, para visualizar calificaciones, si se promedian actividades agrupada por categoria

--- a/config/userconfig.json
+++ b/config/userconfig.json
@@ -1,8 +1,8 @@
 {
   "grado": "",
-  "nombre": "",
-  "clave": "",
-  "correo": "",
+  "nombre": "Violeta Sarai Vera Salazar",
+  "clave": "IS17110640",
+  "correo": "LIS17110640@irapuato.tecnm.mx",
   "califi": "1",
   "valequipo": "0"
 }
