--- a/config/userconfig.json
+++ b/config/userconfig.json
@@ -4,5 +4,6 @@
   "clave": "IS17110640",
   "correo": "LIS17110640@irapuato.tecnm.mx",
   "califi": "1",
-  "valequipo": "0"
+  "valequipo": "0",
+  "extra1": "1"
 }
