Cambio a valores por default de archivo de configuración

--- a/config/userconfig.json
+++ b/config/userconfig.json
@@ -1,9 +1,9 @@
 {
   "grado": "",
-  "nombre": "Violeta Sarai Vera Salazar",
-  "clave": "IS17110640",
-  "correo": "LIS17110640@irapuato.tecnm.mx",
-  "califi": "1",
+  "nombre": "",
+  "clave": "",
+  "correo": "",
+  "califi": "0",
   "valequipo": "0",
-  "extra1": "1"
+  "extra1": "0"
 }
