--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adminstudent",
-  "version": "1.1.2",
+  "version": "1.1.5",
   "main": "main.js",
   "scripts": {
     "exec": "electron .",
@@ -24,8 +24,6 @@
     "bs-custom-file-input": "^1.3.4",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
-    "electron-first-run": "^3.0.0",
-    "electron-squirrel-startup": "^1.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-ip-filter-middleware": "^1.0.20",
@@ -54,13 +52,14 @@
     "nsis": {
       "oneClick": true,
       "allowElevation": true,
-      "allowToChangeInstallationDirectory" : false,
-      "createDesktopShortcut" : true,
-      "createStartMenuShortcut" : true,
+      "allowToChangeInstallationDirectory": false,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
       "include": "build/installer.nsh",
       "license": "build/license.txt"
     },
-    "extraFiles": ["build"]
-
+    "extraFiles": [
+      "build"
+    ]
   }
 }
