--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "win": {
       "target": "NSIS"
     },
+
     "asar": false,
     "nsis": {
       "oneClick": true,
@@ -55,6 +56,7 @@
       "allowToChangeInstallationDirectory": false,
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
+      "shortcutName": "Seguimiento del Estudiante",
       "include": "build/installer.nsh",
       "license": "build/license.txt"
     },
