--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adminstudent",
-  "version": "1.1.7",
+  "version": "1.1.7RC2",
   "main": "main.js",
   "scripts": {
     "exec": "electron .",
@@ -58,7 +58,8 @@
       "createStartMenuShortcut": true,
       "shortcutName": "Seguimiento del Estudiante",
       "include": "build/installer.nsh",
-      "license": "build/license.txt"
+      "license": "build/license.txt",
+      "runAfterFinish": false
     },
     "extraFiles": [
       "build"
