--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adminstudent",
-  "version": "1.1.7RC2",
+  "version": "1.1.8Release",
   "main": "main.js",
   "scripts": {
     "exec": "electron .",
